--- a/menuexplorerapp/package.json
+++ b/menuexplorerapp/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^4.0.0",
     "express": "^4.16.2"
   },
-
   "devDependencies": {
     "nodemon": "^1.14.7"
   }
